@@ -2,9 +2,10 @@ This file documents the revision history for Perl extension Mojolicious.
 
 2.63    2012-03-20 00:00:00
         - Added Mojolicious::Routes::Route.
-        - Added find method to Mojolicious::Routes::Route.
+        - Added find and root methods to Mojolicious::Routes::Route.
         - Improved form_for helper to automatically add method="POST"
           attributes when necessary.
+        - Improved memory usage of Mojolicious::Routes.
         - Improved Mojolicious::Renderer performance.
         - Improved documentation.
         - Improved tests.
